classDiagram
    class Person {
        +int PersonID
        +String Fornavn
        +String Mellomnavn
        +String Etternavn
        +Date Fodselsdag
        +String Telefonnummer
        +String Epost
        +BrukerType brukerType
    }

    class Saksbehandler {
        +String AnsattID
        +String JobbEmail
        +String JobbTelefon
    }

    class Innmelding {
        +int InnmeldID
        +DateTime Innmeldingstidspunkt
        +DateTime SisteEndring
    }

    class Status {
        +int StatusID
        +String Beskrivelse
        +boolean Uavklart
    }

    class Prioritet {
        +int PrioritetID
        +String Beskrivelse
    }

    class Geometri {
        +int GeometriID
        +Geometry GeometriData
        +Polygon Omrade
    }

    class Kommune {
        +String KommuneNR
        +String Navn
        +Polygon Grense
    }

    class Karttype {
        +String KartID
        +String Beskrivelse
    }

    class Kilde {
        +String KildeID
        +String Beskrivelse
        +String Opprinnelse
    }

    class KartKilde {
        +String KartID
        +String KildeID
    }

    class Chat {
        +int ChatID
        +Date StartDato
    }

    class Melding {
        +int MeldingID
        +String Innhold
        +DateTime Tidspunkt
    }

    class Tilbakemelding {
        +int TilbakemeldingsID
        +DateTime Dato
        +String Innhold
    }

    class Verifisering {
        +int VerifiseringID
        +boolean ErBekreftet
        +String Kommentar
        +DateTime Tidspunkt
    }

    Person <|-- Saksbehandler
    Person "1" -- "0..*" Innmelding
    Saksbehandler "1" -- "0..*" Innmelding
    Innmelding "0..*" -- "1" Status
    Innmelding "0..*" -- "1" Prioritet
    Innmelding "0..*" -- "1" Kommune
    Innmelding "0..*" -- "1" Karttype
    Innmelding "1" -- "0..*" Geometri
    Innmelding "1" -- "0..*" Tilbakemelding
    Innmelding "1" -- "0..1" Chat
    Innmelding "1" -- "0..*" Verifisering
    Karttype "1" -- "0..*" KartKilde
    Kilde "1" -- "0..*" KartKilde
    Chat "1" -- "0..*" Melding
    Person "1" -- "0..*" Chat
    Person "1" -- "0..*" Melding
    Person "1" -- "0..*" Verifisering